# PresentAI

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  SUPABASE_SETUP.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  start.js  vercel.json
electron/servers/fastapi/: alembic.ini  placeholder  pyproject.toml  server.py  server.spec
electron/servers/fastapi/api/: lifespan.py  main.py
electron/servers/fastapi/constants/: presentation.py
electron/servers/fastapi/models/: decompose_files_body.py  generate_presentation_request.py  llm_tools.py  ollama_model_status.py  presentation_with_slides.py  theme_data.py  user_config.py
electron/servers/fastapi/scripts/: fresh_sqlite_migrate.py
electron/servers/fastapi/services/: database.py  documents_loader.py  export_task_service.py  image_generation_service.py  llm_client.py  (+2 more)
servers/fastapi/: .coverage  mcp_server.py  migrations.py  pyproject.toml  server.py
servers/fastapi/alembic/: env.py
servers/fastapi/api/: lifespan.py  main.py  middlewares.py
servers/fastapi/constants/: documents.py  llm.py  supported_ollama_models.py
servers/fastapi/enums/: llm_provider.py  web_search_provider.py
servers/fastapi/models/: ollama_model_metadata.py  pptx_models.py  presentation_layout.py  user_config.py
servers/fastapi/presenton_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
servers/fastapi/scripts/: warm_fastembed_cache.py
servers/fastapi/services/: database.py  documents_loader.py  export_task_service.py  icon_finder_service.py  image_generation_service.py  liteparse_service.py  mem0_presentation_memory_service.py  pptx_presentation_creator.py
servers/fastapi/templates/: custom_layout_from_db.py  get_layout_by_name.py  handler.py  presentation_layout.py  preview.py  providers.py  router.py
servers/fastapi/tests/: conftest.py  test_liteparse_service.py  test_mem0_presentation_memory_service.py  test_slide_to_html.py
servers/fastapi/utils/: asset_directory_utils.py  available_models.py  db_utils.py  get_env.py  get_layout_by_name.py  internal_http.py  llm_client_error_handler.py  llm_config.py  llm_provider.py  llm_utils.py  mime_types.py  model_availability.py  ocr_language.py  path_helpers.py  process_slides.py  schema_utils.py  set_env.py  simple_auth.py  user_config.py  web_search.py
(+488 files in other folders)
